<resources>
    <string name="app_name">Periodic Table</string>
    <string name="app_version">Version: 0.1.0 pre-pre alpha</string>

    <string name="nav_menu_title">Periodic Table</string>
    <string name="menu_item_tables">Tables</string>
    <string name="menu_item_elements_list">Chemical elements list</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_share">Share</string>

    <string name="description_default">none</string>

    <string name="stub_f">Stub</string>
    <string name="stub_s">St</string>

    <string name="action_settings">Settings</string>
    <string name="action_cat_male">Кот</string>
    <string name="action_cat_female">Кошка</string>
    <string name="action_kitten">Котёнок</string>


    <!--Elements strings-->
    <string name="hydrogen_f">Hydrogen</string>
    <string name="hydrogen_s">H</string>
    <string name="lithium_f">Lithium</string>
    <string name="lithium_s">Li</string>
    <string name="beryllium_f">Beryllium</string>
    <string name="betyllium_s">Be</string>
    <string name="boron_f">Boron</string>
    <string name="boron_s">B</string>
    <string name="carbon_f">Carbon</string>
    <string name="carbon_s">C</string>
    <string name="nitrogen_f">Nitrogen</string>
    <string name="nitrogen_s">N</string>
    <string name="oxygen_f">Oxygen</string>
    <string name="oxygen_s">O</string>
    <string name="fluorine_f">Fluorine</string>
    <string name="fluorine_s">F</string>
    <string name="neon_f">Neon</string>
    <string name="neon_s">Ne</string>
    <string name="sodium_f">Sodium</string>
    <string name="sodium_s">Na</string>
    <string name="potassium_f">Potassium</string>
    <string name="potassium_s">K</string>
    <string name="copper_f">Copper</string>
    <string name="copper_s">Cu</string>
    <string name="rubidium_f">Rubidium</string>
    <string name="rubidium_s">Rb</string>
    <string name="silver_f">Silver</string>
    <string name="silver_s">Ag</string>
    <string name="caesium_f">Caesium</string>
    <string name="caesium_s">Cs</string>
    <string name="gold_f">Gold</string>
    <string name="gold_s">Au</string>
    <string name="francium_f">Francium</string>
    <string name="francium_s">Fr</string>
    <string name="roentgenium_f">Roentgenium</string>
    <string name="roentgenium_s">Rg</string>
    <string name="title_activity_about">About</string>


    <!--****************************** Settings strings ********************************-->

    <string name="settingsGeneralTitle">General settings:</string>

    <string name="settingsFormTable">Form table</string>
    <string name="settingsFormTableDescription">Choose the form that you like more</string>

    <string name="settingsFontSize">Font size</string>
    <string name="settingsFontSizeDescription">Adjust the font size</string>

    <string name="settingsLanguage">Language</string>
    <string name="settingsLanguageDescription">An application restart is required for the language
    change to take effect</string>


    <string name="settingsExtraTitle">Extra:</string>

    <string name="settingsReportBug">Report a bug</string>
    <string name="settingsReportBugDescription">Help us make the app better</string>

    <string name="settingsUpdateCheck">Check for update</string>
    <string name="settingsUpdateCheckDescription">Manually check for a new version of the app</string>


    <string name="settingsPhotosTitle">Photos of the elements:</string>

    <string name="settingsImageElements">Image elements</string>
    <string name="settingsImageElementsLink">some link</string>

    <string name="settingsEmissionSpectrum">Emission spectrum</string>
    <string name="settingsEmissionSpectrumLink">some link</string>


    <string name="settingsVersionTitle">Version:</string>

    <string name="settingsAbout">About</string>
    <string name="settingsAboutDescription">General app information</string>

    <string name="settingsPeriodicTable">Periodic Table</string>
    <string name="settingsPeriodicTableVersion">@string/app_version</string>


    <!--About multiline html string-->
    <string name="aboutTitleContent"><![CDATA[

            <b>Periodic Table</b> - this is a free application for Android with a long-form periodic
            table approved by the International Union of Pure and Applied Chemistry(UIPAC). A
            solubility table is also available.<br/><br/>

            <b>Application Features:</b><br/>
            - Provides up-to-date information about any element on the periodic table
            (including images).<br/>
            - Direct links to the element\'s Wikipedia page for further research.<br/>
            - Solubility table.<br/>
            - Search function for elements (not case-sensitive).<br/>
            - Highlight elements in a category in the table and in the search menu.<br/><br/>

            <b>Elements can be filtered into ten categories:</b><br/>
             * Alkaline earth metals<br/>
             * Alkali metals<br/>
             * Transition metals<br/>
             * Post-transition metals<br/>
             * Lanthanides<br/>
             * Semimetals<br/>
             * Actinides<br/>
             * Other non-metals<br/>
             * Halogens<br/>
             * Inert gases<br/>
            ]]>
    </string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_elements_list">ElementsList</string>
    <string name="title_activity_tables">Tables</string>

</resources>