<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Settings"

    tools:showIn="@layout/activity_settings">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/settingsGeneralTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/settingsGeneralTitle"
                    android:textColor="@color/colorSimpleBlue" />

                <!--Hidden-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:padding="15dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/settingsFormTable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settingsFormTable"
                        android:textAppearance="@style/TextAppearance.Bold"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/settingsFormTableDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settingsFormTableDescription" />

                </LinearLayout>

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/settingsFontSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settingsFontSize"
                        android:textAppearance="@style/TextAppearance.Bold"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/settingsFontSizeDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settingsFontSizeDescription" />

                </LinearLayout>

                <View
                    android:id="@+id/divider4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/settingsLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settingsLanguage"
                        android:textAppearance="@style/TextAppearance.Bold"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/settingsLanguageDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settingsLanguageDescription" />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"


                android:orientation="vertical"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/settingsExtraTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/settingsExtraTitle"
                    android:textColor="@color/colorSimpleBlue" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/settingsReportBug"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settingsReportBug"
                        android:textAppearance="@style/TextAppearance.Bold"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/settingsReportBugDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settingsReportBugDescription" />

                </LinearLayout>

                <View
                    android:id="@+id/divider5"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/settingsUpdateCheck"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settingsUpdateCheck"
                        android:textAppearance="@style/TextAppearance.Bold"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/settingsUpdateCheckDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settingsUpdateCheckDescription" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"


                android:orientation="vertical"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/settingsPhotosTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/settingsPhotosTitle"
                    android:textColor="@color/colorSimpleBlue" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/settingsImageElements"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settingsImageElements"
                        android:textAppearance="@style/TextAppearance.Bold"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/settingsImageElementsLink"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settingsImageElementsLink" />

                </LinearLayout>

                <View
                    android:id="@+id/divider6"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/settingsEmissionSpectrum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settingsEmissionSpectrum"
                        android:textAppearance="@style/TextAppearance.Bold"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/settingsEmissionSpectrumLink"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settingsEmissionSpectrumLink" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"


                android:orientation="vertical"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/settingsVersionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/settingsVersionTitle"
                    android:textColor="@color/colorSimpleBlue" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/settingsAbout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settingsAbout"
                        android:textAppearance="@style/TextAppearance.Bold"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/settingsAboutDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settingsAboutDescription" />

                </LinearLayout>

                <View
                    android:id="@+id/divider7"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/settingsPeriodicTable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settingsPeriodicTable"
                        android:textAppearance="@style/TextAppearance.Bold"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/settingsPeriodicTableVersion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settingsPeriodicTableVersion" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>

<!--

        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"

-->